apps/vpn/base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-rest-api-default
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-rest-api
      app.kubernetes.io/component: default
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-rest-api
        app.kubernetes.io/part-of: vpn
        app.kubernetes.io/component: default
    spec:
      containers:
        - name: wg-rest-api
          image: leonovk/wg-rest-api
          ports:
            - name: wireguard
              containerPort: 51820
              protocol: UDP
            - name: api
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/wireguard
              name: wg-config
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: wg-config
          persistentVolumeClaim:
            claimName: wg-rest-pvc-default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-rest-api-internal
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-rest-api
      app.kubernetes.io/component: internal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-rest-api
        app.kubernetes.io/part-of: vpn
        app.kubernetes.io/component: internal
    spec:
      containers:
        - name: wg-rest-api
          image: leonovk/wg-rest-api
          ports:
            - name: wireguard
              containerPort: 51820
              protocol: UDP
            - name: api
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/wireguard
              name: wg-config
          securityContext:
            privileged: true
      volumes:
        - name: wg-config
          persistentVolumeClaim:
            claimName: wg-rest-pvc-internal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-rest-api-external
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-rest-api
      app.kubernetes.io/component: external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-rest-api
        app.kubernetes.io/part-of: vpn
        app.kubernetes.io/component: external
    spec:
      containers:
        - name: wg-rest-api
          image: leonovk/wg-rest-api
          ports:
            - name: wireguard
              containerPort: 51820
              protocol: UDP
            - name: api
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/wireguard
              name: wg-config
          securityContext:
            privileged: true
      volumes:
        - name: wg-config
          persistentVolumeClaim:
            claimName: wg-rest-pvc-external
