apps/vpn/base/openvpn-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openvpn-external
  labels:
    app.kubernetes.io/name: openvpn
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openvpn
      app.kubernetes.io/component: external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openvpn
        app.kubernetes.io/part-of: vpn
        app.kubernetes.io/component: external
    spec:
      containers:
        - name: openvpn
          image: kylemanna/openvpn:latest@sha256:643531abb010a088f1e23a1c99d44f0bd417a3dbb483f809caf4396b5c9829a0
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              sysctl -w net.ipv4.ip_forward=1
              iptables -t nat -C POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE 2>/dev/null || iptables -t nat -A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
              exec openvpn --config /etc/openvpn/server.conf
          ports:
            - name: openvpn
              containerPort: 443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/openvpn/server.conf
              name: config
              readOnly: true
              subPath: server.conf
            - mountPath: /etc/openvpn/certs
              name: certs
              readOnly: true
          securityContext:
            privileged: true
      volumes:
        - name: config
          configMap:
            name: openvpn-external-config
        - name: certs
          secret:
            secretName: openvpn-external-certs
