apps/vpn/base/openvpn-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-external-tcp-external
  labels:
    app.kubernetes.io/name: openvpn
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: external
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: openvpn
    app.kubernetes.io/component: external
  ports:
    - name: openvpn
      protocol: TCP
      port: 443
      targetPort: openvpn
      nodePort: 30443
