apps/vpn/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-default-udp-external
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: default
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/component: default
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: wireguard
      nodePort: 31820
---
apiVersion: v1
kind: Service
metadata:
  name: wg-default-api-internal
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/component: default
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: api
---
apiVersion: v1
kind: Service
metadata:
  name: wg-internal-udp-external
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: internal
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/component: internal
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: wireguard
      nodePort: 31821
---
apiVersion: v1
kind: Service
metadata:
  name: wg-internal-api-internal
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/component: internal
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: api
---
apiVersion: v1
kind: Service
metadata:
  name: wg-external-udp-external
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: external
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/component: external
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: wireguard
      nodePort: 31822
---
apiVersion: v1
kind: Service
metadata:
  name: wg-external-api-internal
  labels:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/part-of: vpn
    app.kubernetes.io/component: external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wg-rest-api
    app.kubernetes.io/component: external
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: api
